@@ -24,15 +24,18 @@
 
 package cls;
 
+import lombok.AccessLevel;
+import lombok.NoArgsConstructor;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 /**
  * GetAllFieldNamesSnippet.
  */
+@NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class GetAllFieldNamesSnippet {
 
   /**
@@ -46,10 +49,11 @@ public class GetAllFieldNamesSnippet {
     var currentClazz = clazz;
     while (currentClazz != null) {
       fields.addAll(
-          Arrays.stream(currentClazz.getDeclaredFields())
-              .filter(field -> !field.isSynthetic())
-              .map(Field::getName)
-              .collect(Collectors.toList()));
+              Arrays.stream(currentClazz.getDeclaredFields())
+                      .filter(field -> !field.isSynthetic())
+                      .map(Field::getName)
+                      .toList()
+      );
       currentClazz = currentClazz.getSuperclass();
     }
     return fields;
